# src/backend/controllers/CustomGroupsService.js
@@ -7,26 +7,46 @@ const mongo = require("../utils/mongo");
 const config = require("../config/config");
 const logger = require("../config/logConfig");
 
-exports.getCustomGroups = function(args, res, next) {
+exports.getCustomGroups = function (args, res, next) {
   /**
    * Returns all groups
    *
    * returns List
    **/
+  var meta = args.meta.value;
   logger.info("Get Groups");
-  mongo.getCustomGroups(function(err, data) {
-    if (err) {
-    //  logger.info(err);
-      res.sendStatus(500); // internal server error
-    } else {
-     // logger.info(data);
-      logger.info("Get!");
-      res.send(data);
-    }
-  });
-};
+  if (!meta || meta.length == 0) {
+    mongo.getCustomGroups(function (err, data) {
+      if (err) {
+        logger.info(err);
+        res.sendStatus(500); // internal server error
+      } else {
+        logger.info("Get!");
+        res.send(data);
+      }
+    });
+  } else if (meta && meta.length == 2) {
+    var metaDataField = meta[0];
+    var value = meta[1];
+    mongo.getCustomGroupByMetadata(metaDataField, value, function (err, data) {
+      if (err) {
+        logger.info(err);
+        res.sendStatus(500); // internal server error
+      } else if (data) {
+        logger.info("Get " + metaDataField + " " + value);
+        res.send(data);
+      } else {
+        logger.info("Not found");
+        res.sendStatus(404);
+      }
+    });
+  } else {
+    logger.info("Bad request");
+    res.sendStatus(400); // bad request
+  }
+}
 
-exports.getCustomGroup = function(args, res, next) {
+exports.getCustomGroup = function (args, res, next) {
   /**
    * Return an existing group
    *
@@ -42,9 +62,9 @@ exports.getCustomGroup = function(args, res, next) {
     logger.info("Bad request");
     res.sendStatus(400); // bad request
   } else {
-    mongo.getCustomGroup(groupName, year, function(err, data) {
+    mongo.getCustomGroup(groupName, year, function (err, data) {
       if (err) {
-           // logger.info(err);
+        logger.info(err);
         res.sendStatus(500); // internal server error
       } else if (data) {
         logger.info("Get group!");
@@ -57,38 +77,7 @@ exports.getCustomGroup = function(args, res, next) {
   }
 };
 
-exports.getCustomGroupByMetadata = function(args, res, next) {
-  /**
-   * Return an existing group
-   *
-   * returns List
-   **/
-  var metaDataField = args.metaDataField.value;
-  var value = args.value.value;
-  logger.info("Get " + metaDataField + " " + value);
-  if (!metaDataField) {
-    logger.info("Bad request");
-    res.sendStatus(400); // bad request
-  } else if (!value) {
-    logger.info("Bad request");
-    res.sendStatus(400); // bad request
-  } else {
-    mongo.getCustomGroupByMetadata(metaDataField, value, function(err, data) {
-      if (err) {
-            //logger.info(err);
-        res.sendStatus(500); // internal server error
-      } else if (data) {
-        logger.info("Get groups!");
-        res.send(data);
-      } else {
-        logger.info("Not found");
-        res.sendStatus(404);
-      }
-    });
-  }  
-};
-
-exports.insertCustomGroup = function(args, res, next) {
+exports.insertCustomGroup = function (args, res, next) {
   /**
    * Insert a new group
    *
@@ -107,7 +96,8 @@ exports.insertCustomGroup = function(args, res, next) {
       customGroup[0].researchers &&
       customGroup[0].groupName != undefined &&
       customGroup[0].year != undefined &&
-      customGroup[0].researchers != undefined
+      customGroup[0].researchers != undefined &&
+      !customGroup[0]._id
     ) {
       var flag = 0;
       for (var i = 0; i < customGroup[0].researchers.length; i++) {
@@ -117,11 +107,10 @@ exports.insertCustomGroup = function(args, res, next) {
         }
       }
       if (flag != 0) {
-        console.log("Mu mal");
         logger.info("Unprocessable entity");
         res.sendStatus(422); // unprocessable entity
       } else {
-        mongo.insertCustomGroup(customGroup, function(err, data) {
+        mongo.insertCustomGroup(customGroup, function (err, data) {
           if (err) {
             logger.info(err);
             res.sendStatus(500); // internal server error
@@ -136,14 +125,13 @@ exports.insertCustomGroup = function(args, res, next) {
         });
       }
     } else {
-      console.log("Mal");
       logger.info("Unprocessable entity");
       res.sendStatus(422); // unprocessable entity
     }
   }
 };
 
-exports.deleteCustomGroup = function(args, res, next) {
+exports.deleteCustomGroup = function (args, res, next) {
   /**
    * Delete an existing group
    *
@@ -158,7 +146,7 @@ exports.deleteCustomGroup = function(args, res, next) {
     logger.info("Bad Request");
     res.sendStatus(400).end();
   } else {
-    mongo.deleteCustomGroup(groupName, year, function(err, result) {
+    mongo.deleteCustomGroup(groupName, year, function (err, result) {
       if (err) {
         logger.info(err);
         res.sendStatus(500).end(); // internal server error
